--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -1,6 +1,6 @@
 /* 웹폰트 */
 @import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
-/* 리셋 */
+
 /* 여백 초기화 */
 * {
     margin: 0;
@@ -21,6 +21,11 @@ li {
     list-style: none;
 }
 
+/* 제목 초기화 */
+h1, h2, h3, h4, h5, h6 {
+    font-weight: normal;
+}
+
 /* 모든 페이지 레이아웃 */
 body{
     padding: 40px;
@@ -30,6 +35,7 @@ body{
     padding-bottom: 40px;
 }
 #main {
+    padding: 40px 0;
     border-bottom: 1px dashed #DCDCDC;
 }
 #footer {
@@ -67,7 +73,26 @@ body{
     background-color: #000;
     color: #fff;
 }
+/* 메인 샘플 */
+.main_sample {
+    margin-top: 40px;
+    border-top: 1px dashed #dcdcdc;
+    padding-top: 40px;
+}
+.main_sample h3 {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+.main_sample p {
+    margin-bottom: 10px;
+    color: #666;
+}
+.main_sample .script {
 
+}
+.main_sample .result {
+    
+}
 @media (max-width: 800px) {
     body {
         padding: 20px;
