--- a/layout/layout02.html
+++ b/layout/layout02.html
@@ -10,7 +10,7 @@
             margin: 0;
         }
         body {
-            background-color: #FFF3E0;
+            background-color: #E8F5E9;
         }
         #wrap {
             width: 1200px;
@@ -19,29 +19,35 @@
         #header {
             width: 100%;
             height: 100px;
-            background-color: #FFE0B2;
+            background-color: #C8E6C9;
         }
         #nav {
             width: 100%;
             height: 100px;
-            background-color: #FFCC80;
+            background-color: #A5D6A7;
         }
-        #aside {
-            width: 30%;
+        #aside1 {
+            width: 25%;
             height: 780px;
-            background-color: #FFB74D;
+            background-color: #81C784;
             float: left;
         }
-        #section {
-            width: 70%;
+        #aside2 {
+            width: 50%;
             height: 780px;
-            background-color: #FFA726;
+            background-color: #66BB6A;
+            float: left;
+        }
+        #aside3 {
+            width: 25%;
+            height: 780px;
+            background-color: #4CAF50;
             float: left;
         }
         #footer {
             width: 100%;
             height: 100px;
-            background-color: #FF9800;
+            background-color: #43A047;
             clear: both;
         }
         @media (max-width:1220px) {
@@ -53,25 +59,43 @@
             #wrap {
                 width: 100%;
             }
+            #aside1 {
+                width: 35%;
+            }
+            #aside2 {
+                width: 65%;
+            }
+            #aside3 {
+                width: 100%;
+                height: 150px;
+            }
         }
         @media (max-width:480px) {
-            #aside {
+            #wrap {
                 width: 100%;
-                height: 300px;
             }
-            #section {
+            #aside1 {
                 width: 100%;
-                height: 480px;
+                height: 200px;
             }
-        }       
-</style>
+            #aside2 {
+                width: 100%;
+                height: 430px;
+            }
+            #aside3 {
+                width: 100%;
+                height: 150px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div id="wrap">
         <div id="header"></div>
         <div id="nav"></div>
-        <div id="aside"></div>
-        <div id="section"></div>
+        <div id="aside1"></div>
+        <div id="aside2"></div>
+        <div id="aside3"></div>
         <div id="footer"></div>
     </div>
 </body>
