--- a/layout/layoutgrid01.html
+++ b/layout/layoutgrid01.html
@@ -15,32 +15,36 @@
         #wrap {
             width: 1200px;
             margin: 0 auto;
+            display: grid;
+            grid-template-areas:
+                "header header"
+                "nav nav"
+                "aside section"
+                "footer footer"
+            ;
+            grid-template-columns: 30% 70%;
+            grid-template-rows: 100px 100px 780px 100px;
         }
         #header {
-            width: 100%;
-            height: 100px;
+            grid-area: header;
             background-color: #FFE0B2;
         }
         #nav {
-            width: 100%;
-            height: 100px;
+            grid-area: nav;
             background-color: #FFCC80;
         }
         #aside {
-            width: 30%;
-            height: 780px;
+            grid-area: aside;
             background-color: #FFB74D;
             float: left;
         }
         #section {
-            width: 70%;
-            height: 780px;
+            grid-area: section;
             background-color: #FFA726;
             float: left;
         }
         #footer {
-            width: 100%;
-            height: 100px;
+            grid-area: footer;
             background-color: #FF9800;
             clear: both;
         }
@@ -64,7 +68,7 @@
                 height: 480px;
             }
         }       
-</style>
+    </style>
 </head>
 <body>
     <div id="wrap">
