--- a/layout/layoutgrid02.html
+++ b/layout/layoutgrid02.html
@@ -10,38 +10,54 @@
             margin: 0;
         }
         body {
-            background-color: #FFF3E0;
+            background-color: #E8F5E9;
         }
         #wrap {
             width: 1200px;
             margin: 0 auto;
+            display: grid;
+            grid-template-areas:
+                "header header"
+                "nav nav"
+                "aside1 aside2 aside3"
+                "footer footer"
+            ;
+            grid-template-columns: 25% 25% 50%;
+            grid-template-rows: 100px 100px 780px 100px;
+            
         }
         #header {
             width: 100%;
             height: 100px;
-            background-color: #FFE0B2;
+            background-color: #C8E6C9;
         }
         #nav {
             width: 100%;
             height: 100px;
-            background-color: #FFCC80;
+            background-color: #A5D6A7;
         }
-        #aside {
-            width: 30%;
+        #aside1 {
+            width: 25%;
             height: 780px;
-            background-color: #FFB74D;
+            background-color: #81C784;
             float: left;
         }
-        #section {
-            width: 70%;
+        #aside2 {
+            width: 50%;
             height: 780px;
-            background-color: #FFA726;
+            background-color: #66BB6A;
+            float: left;
+        }
+        #aside3 {
+            width: 25%;
+            height: 780px;
+            background-color: #4CAF50;
             float: left;
         }
         #footer {
             width: 100%;
             height: 100px;
-            background-color: #FF9800;
+            background-color: #43A047;
             clear: both;
         }
         @media (max-width:1220px) {
@@ -55,24 +71,31 @@
             }
         }
         @media (max-width:480px) {
-            #aside {
+            #wrap {
                 width: 100%;
-                height: 300px;
             }
-            #section {
+            #aside1 {
                 width: 100%;
-                height: 480px;
+                height: 630px;
             }
-        }       
-</style>
+            #aside2 {
+                width: 100%;
+                height: 630px;
+            }
+            #aside3 {
+                width: 100%;
+                height: 150px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div id="wrap">
         <div id="header"></div>
         <div id="nav"></div>
-        <div id="aside"></div>
-        <div id="section"></div>
+        <div id="aside1"></div>
+        <div id="aside2"></div>
+        <div id="aside3"></div>
         <div id="footer"></div>
     </div>
 </body>
-</html>
