--- a/layout/layoutgrid03.html
+++ b/layout/layoutgrid03.html
@@ -10,7 +10,7 @@
             margin: 0;
         }
         body {
-            background-color: #FFF3E0;
+            background-color: #ddedff;
         }
         #wrap {
             width: 1200px;
@@ -19,29 +19,41 @@
         #header {
             width: 100%;
             height: 100px;
-            background-color: #FFE0B2;
+            background-color: #accbee;
         }
         #nav {
             width: 100%;
             height: 100px;
-            background-color: #FFCC80;
+            background-color: #7da5d3;
         }
         #aside {
-            width: 30%;
+            width: 25%;
             height: 780px;
-            background-color: #FFB74D;
+            background-color: #86adda;
             float: left;
         }
-        #section {
-            width: 70%;
-            height: 780px;
-            background-color: #FFA726;
+        #section1 {
+            width: 75%;
+            height: 260px;
+            background-color: #607d9e;
+            float: left;
+        }
+        #section2 {
+            width: 75%;
+            height: 260px;
+            background-color: #4f76a1;
+            float: left;
+        }
+        #section3 {
+            width: 75%;
+            height: 260px;
+            background-color: #4c7fb4;
             float: left;
         }
         #footer {
             width: 100%;
             height: 100px;
-            background-color: #FF9800;
+            background-color: #2f4d6e;
             clear: both;
         }
         @media (max-width:1220px) {
@@ -57,22 +69,23 @@
         @media (max-width:480px) {
             #aside {
                 width: 100%;
-                height: 300px;
+                height: 480px;
             }
-            #section {
+            #section1 {
                 width: 100%;
                 height: 480px;
             }
-        }       
-</style>
+        }      
+    </style>
 </head>
 <body>
     <div id="wrap">
         <div id="header"></div>
         <div id="nav"></div>
         <div id="aside"></div>
-        <div id="section"></div>
+        <div id="section1"></div>
+        <div id="section2"></div>
+        <div id="section3"></div>
         <div id="footer"></div>
     </div>
 </body>
-</html>
