--- a/layout/layout01_04.html
+++ b/layout/layout01_04.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레이아웃 유형1</title>
+    <title>레이아웃 유형1 flex 반응형</title>
     <style>
         * {
             margin: 0;
@@ -16,66 +16,57 @@
         #wrap {
             width: 1200px;
             margin: 0 auto;
-            display: grid;
-            grid-template-areas: 
-                "header header"
-                "nav nav"
-                "aside section"
-                "footer footer"
-            ;
-            grid-template-columns: 30% 70%;
-            grid-template-rows: 100px 100px 780px 100px;
+            display: flex;
+            flex-wrap: wrap;
         }
         #header {
+            width: 100%;
+            height: 100px;
             background-color: #ffe0b2;
-            grid-area: header;
         }
         #nav {
+            width: 100%;
+            height: 100px;
             background-color: #ffcc80;
-            grid-area: nav;
         }
         #aside {
+            width: 30%;
+            height: 780px;
             background-color: #ffb74d;
             float: left;
-            grid-area: aside;
         }
         #section {
+            width: 70%;
+            height: 780px;
             background-color: #ffa726;
             float: left;
-            grid-area: section;
-            
         }
         #footer {
+            width: 100%;
+            height: 100px;
             background-color: #ff9800;
             clear: both;
-            grid-area: footer;
         }
 
         /* 미디어쿼리 */
         @media (max-width: 1300px) {
-            #wrap {
+            #wrap{
                 width: 96%;
             }
         }
         @media (max-width: 768px) {
-            #wrap {
+            #wrap{
                 width: 100%;
             }
         }
         @media (max-width: 480px) {
-            #wrap {
-                width: 1200px;
-                margin: 0 auto;
-                display: grid;
-                grid-template-areas: 
-                    "header"
-                    "nav"
-                    "aside"
-                    "section"
-                    "footer"
-                ;
-                grid-template-columns: 100%;
-                grid-template-rows: 100px 100px 300px 480px 100px;
+            #aside {
+                width: 100%;
+                height: 300px;
+            }
+            #section {
+                width: 100%;
+                height: 480px;
             }
         }
     </style>
@@ -92,9 +83,7 @@
         layout 01_01 : float 방식 레이아웃
         layout 01_02 : float 방식 반응형 레이아웃
         layout 01_03 : flex 방식 레이아웃
-        layout 01_04 : flex 방식 반응형 레이아웃
-        layout 01_05 : grid 방식 레이아웃
-        layout 01_06 : gird 방식 반응형 레이아웃
-     -->
+        layout 01_04 : flex 방식 반응형 레이아웃   
+    -->
 </body>
 </html>
