--- a/layout/layout02_04.html
+++ b/layout/layout02_04.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레이아웃 유형2</title>
+    <title>레이아웃 유형2 flex 반응형</title>
     <style>
         * {
             margin: 0;
@@ -26,17 +26,21 @@
             background-color: #a5d6a7;
         }
         #main {
-            display: grid;
-            grid-template-columns: 30% 40% 30%;
-            grid-template-rows: 780px;
+            display: flex;
         }
         #aside {
+            width: 30%;
+            height: 780px;
             background-color: #81c784;
         }
         #section {
+            width: 40%;
+            height: 780px;
             background-color: #66bb6a;
         }
         #article {
+            width: 30%;
+            height: 780px;
             background-color: #4caf50;
         }
         #footer {
@@ -54,32 +58,29 @@
                 width: 100%;
             }
             #main {
-                grid-template-areas: 
-                    "aside section"
-                    "article article"
-                ;
-                grid-template-columns: 30% 70% 100%;
-                grid-template-rows: 680px 150px;
+                flex-wrap: wrap;
             }
             #aside {
-                grid-area: aside;
+            width: 30%;
+            height: 630px;
             }
             #section {
-                grid-area: section;
+                width: 70%;
+                height: 630px;
             }
             #article {
-                grid-area: article;
+                width: 100%;
+                height: 150px;
             }
         }
         @media (max-width: 480px) {
-            #main {
-                grid-template-areas: 
-                    "aside"
-                    "section"
-                    "article"
-                ;
-                grid-template-columns: 100%;
-                grid-template-rows: 200px 430px 150px;
+            #aside {
+            width: 100%;
+            height: 200px;
+            }
+            #section {
+                width: 100%;
+                height: 430px;
             }
         }
     </style>
@@ -102,8 +103,6 @@
         layout 02_02 : float 방식 반응형 레이아웃
         layout 02_03 : flex 방식 레이아웃
         layout 02_04 : flex 방식 반응형 레이아웃
-        layout 02_05 : grid 방식 레이아웃
-        layout 02_06 : grid 방식 반응형 레이아웃
      -->
 </body>
 </html>
