--- a/layout/layout03_02.html
+++ b/layout/layout03_02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레이아웃 유형03</title>
+    <title>레이아웃 유형03 float 반응형</title>
     <style>
         * {
             margin: 0;
@@ -26,33 +26,46 @@
             background-color: #81d4fa;
         }
         #main {
-            display: grid;
-            grid-template-areas: 
-                "aside article1 article1"
-                "aside article2 article2"
-                "aside article3 article3";
-            grid-template-columns: 30% 70%;
-            grid-template-rows: 260px 260px 260px;
+
         }
         #aside {
+            width: 30%;
+            height: 780px;
             background-color: #4fc3f7;
-            grid-area: aside;
+            float: left;
         }
         #article1 {
+            width: 70%;
+            height: 260px;
             background-color: #29b6f6;
-            grid-area: article1;
+            float: left;
         }
         #article2 {
+            width: 70%;
+            height: 260px;
             background-color: #03a9f4;
-            grid-area: article2;
+            float: left;
         }
         #article3 {
+            width: 70%;
+            height: 260px;
             background-color: #039be5;
-            grid-area: article3;
+            float: left;
         }
         #footer {
             height: 100px;
             background-color: #0288d1;
+        }
+
+        /* clearfix */
+        .clearfix::before,
+        .clearfix::after {
+            content: '';
+            display: block;
+            line-height: 0;
+        }
+        .clearfix::after {
+            clear: both;
         }
 
         /* 미디어쿼리 */
@@ -60,38 +73,43 @@
             #wrap {
                 width: 96%;
             }
-            #main {
-                grid-template-areas: 
-                    "aside article1 article1"
-                    "aside article2 article3"
-                    "aside article2 article3";
-                grid-template-columns: 30% 35% 35%;
-                grid-template-rows: 260px 520px;
+            #article2 {
+                width: 35%;
+                height: 520px;
+            }
+            #article3 {
+                width: 35%;
+                height: 520px;
             }
         }
         @media (max-width: 768px) {
             #wrap {
                 width: 100%;
-            }  
-            #main {
-                grid-template-areas: 
-                    "aside article1"
-                    "aside article2";
-                grid-template-columns: 30% 70%;
-                grid-template-rows: 390px 390px;
+            }
+            #article1 {
+                width: 70%;
+                height: 390px;
+            }
+            #article2 {
+                width: 70%;
+                height: 390px;
             }
             #article3 {
                 display: none;
             }
         }
         @media (max-width: 480px) {
-            #main {
-                grid-template-areas: 
-                    "aside"
-                    "article1"
-                    "article2";
-                grid-template-columns: 100%;
-                grid-template-rows: 200px 430px 150px;
+            #aside {
+                width: 100%;
+                height: 100px;
+            }
+            #article1 {
+                width: 100%;
+                height: 430px;
+            }
+            #article2 {
+                width: 100%;
+                height: 150px;
             }
         }
     </style>
@@ -112,10 +130,6 @@
     <!-- 
         layout 03_01 : float 방식 레이아웃
         layout 03_02 : float 방식 반응형 레이아웃
-        layout 03_03 : flex 방식 레이아웃
-        layout 03_04 : flex 방식 반응형 레이아웃
-        layout 03_05 : grid 방식 레이아웃
-        layout 03_06 : grid 방식 반응형 레이아웃
      -->
 </body>
 </html>
