--- a/layout/layout03_04.html
+++ b/layout/layout03_04.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레이아웃 유형03</title>
+    <title>레이아웃 유형03 flex 반응형</title>
     <style>
         * {
             margin: 0;
@@ -26,29 +26,30 @@
             background-color: #81d4fa;
         }
         #main {
-            display: grid;
-            grid-template-areas: 
-                "aside article1 article1"
-                "aside article2 article2"
-                "aside article3 article3";
-            grid-template-columns: 30% 70%;
-            grid-template-rows: 260px 260px 260px;
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            height: 780px;
         }
         #aside {
+            width: 30%;
+            height: 780px;
             background-color: #4fc3f7;
-            grid-area: aside;
         }
         #article1 {
+            width: 70%;
+            height: 260px;
             background-color: #29b6f6;
-            grid-area: article1;
         }
-        #article2 {
+        #article2-1 {
+            width: 100%;
+            height: 260px;
             background-color: #03a9f4;
-            grid-area: article2;
         }
-        #article3 {
+        #article2-2 {
+            width: 100%;
+            height: 260px;
             background-color: #039be5;
-            grid-area: article3;
         }
         #footer {
             height: 100px;
@@ -60,38 +61,44 @@
             #wrap {
                 width: 96%;
             }
-            #main {
-                grid-template-areas: 
-                    "aside article1 article1"
-                    "aside article2 article3"
-                    "aside article2 article3";
-                grid-template-columns: 30% 35% 35%;
-                grid-template-rows: 260px 520px;
+            #article2 {
+                display: flex;
+            }
+            #article2-1 {
+                width: 50%;
+                height: 520px;
+            }
+            #article2-2 {
+                width: 50%;
+                height: 520px;
             }
         }
         @media (max-width: 768px) {
             #wrap {
                 width: 100%;
-            }  
-            #main {
-                grid-template-areas: 
-                    "aside article1"
-                    "aside article2";
-                grid-template-columns: 30% 70%;
-                grid-template-rows: 390px 390px;
             }
-            #article3 {
+            #article1 {
+                width: 100%;
+                height: 390px;
+            }
+            #article2-1 {
+                width: 100%;
+                height: 390px;
+            }
+            #article2-2 {
                 display: none;
             }
         }
         @media (max-width: 480px) {
-            #main {
-                grid-template-areas: 
-                    "aside"
-                    "article1"
-                    "article2";
-                grid-template-columns: 100%;
-                grid-template-rows: 200px 430px 150px;
+            #aside {
+                width: 100%;
+                height: 200px;
+            }
+            #article1 {
+                height: 430px;
+            }
+            #article2-1 {
+                height: 150px;
             }
         }
     </style>
@@ -103,8 +110,10 @@
             <div id="main" class="clearfix">
                 <div id="aside"></div>
                 <div id="article1"></div>
-                <div id="article2"></div>
-                <div id="article3"></div>
+                <div id="article2">
+                    <div id="article2-1"></div>
+                    <div id="article2-2"></div>
+                </div>
             </div>
             <div id="footer"></div>
         </div>
@@ -114,8 +123,6 @@
         layout 03_02 : float 방식 반응형 레이아웃
         layout 03_03 : flex 방식 레이아웃
         layout 03_04 : flex 방식 반응형 레이아웃
-        layout 03_05 : grid 방식 레이아웃
-        layout 03_06 : grid 방식 반응형 레이아웃
      -->
 </body>
 </html>
