--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -98,9 +98,7 @@ body {
 }
 
 .main_menu {}
-.main_menu ul{
-    margin-bottom: 20px;
-}
+
 .main_menu li{
     display: inline;
 }
@@ -120,6 +118,7 @@ body {
     border: 1px solid #000;
     padding: 30px;
     background-color: #fff;
+    margin-top: 20px;
 }
 .main_refer .table {
     text-align: center;
@@ -150,7 +149,89 @@ body {
 .main_refer .table table tr a:hover {
     text-decoration: underline;
 }
-
+.document {
+    border: 1px;
+}
+.document i {
+    font-style: normal;
+    position: relative;
+}
+.document i::before {
+    content:'';
+    background-color: #2141df62;
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 20px;
+}
+.document hr {
+    border: 0;
+    border-top: 1px dashed #dcdcdc;
+    margin-top: 45px;
+}
+.document .t_tit {
+    font-size: 30px;
+    line-height: 1.6;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_tit2 {
+    font-size: 22px;
+    line-height: 1.6;
+    margin-top: 50px;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_tit3 {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    font-weight: 400;
+}
+.document .t_desc {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 10px !important;
+}
+.document .t_desc2 {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #666;
+    margin-bottom: 10px !important;
+    padding: 15px 20px !important;
+    border-left: 4px solid #2043f1;
+    background-color: #f9f9f9;
+}
+.document .t_box {
+    padding: 20px !important;
+    background-color: #f9f9f9;
+    margin-bottom: 10px;
+    color: #666;
+    border-radius: 5px;
+}
+.document .t_table {
+    border: 1px solid #dcdcdc;
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+.document .t_table tr th{
+    background-color: #f9f9f9;
+}
+.document .t_table tr th,
+.document .t_table tr td {
+    border: 1px solid #dcdcdc;
+    font-weight: normal;
+    padding: 8px 10px;
+    color: #666
+}
+.document .t_table .ce {
+    text-align: center;
+}
 /* 미디어 쿼리 */
 @media (max-width: 900px){
     #header {
