--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -1,11 +1,11 @@
 /* 웹폰트 */
-@import url('https://webfontworld.github.io/NexonLv1Gothic/NexonLv1Gothic.css');
+@import url('https://webfontworld.github.io/SCoreDream/SCoreDream.css');
 
 /* 여백 초기화 */
 * {
     margin: 0;
     padding: 0;
-    font-family: 'NexonLv1Gothic';
+    font-family: 'SCoreDream';
     font-size: 16px;
     line-height: 1.6;
 }
@@ -126,7 +126,7 @@ body{
 }
 .document i::before {
     content:'';
-    background-color: #2141df62;
+    background-color: #a4d3ac62;
     width: 100%;
     height: 10px;
     position: absolute;
@@ -171,7 +171,7 @@ body{
     color: #666;
     margin-bottom: 10px !important;
     padding: 15px 20px !important;
-    border-left: 4px solid #2043f1;
+    border-left: 4px solid #a4d3ac62;
     background-color: #f9f9f9;
 }
 .document .t_box {
