--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -1,13 +1,11 @@
-/* 웹폰트 */
-@import url('https://webfontworld.github.io/SCoreDream/SCoreDream.css');
+@import url('https://webfontworld.github.io/ok/OKDdung.css');
+@import url('https://webfontworld.github.io/NexonMabinogi/MabinogiClassic.css');
+
 
 /* 여백 초기화 */
 * {
     margin: 0;
     padding: 0;
-    font-family: 'SCoreDream';
-    font-size: 16px;
-    line-height: 1.6;
 }
 
 /* 링크 초기화 */
@@ -26,18 +24,43 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: normal;
 }
 
-/* 모든 페이지 레이아웃 */
-body{
-    padding: 40px;
+/* 볼드체 초기화 */
+strong {
+    font-weight: normal;
 }
-#header {
-    border-bottom: 1px dashed #DCDCDC;
-    padding-bottom: 40px;
+
+/* 기울기 초기화 */
+em, i {
+    font-style: normal;
 }
-#main {
-    padding: 40px 0;
-    border-bottom: 1px dashed #DCDCDC;
+
+/* 테이블 초기화 */
+table {
+    width: 100%;
+    border-spacing: 0;
+    border-collapse: collapse;
 }
+
+/* 기본 셋팅 */
+:root {
+    font-style: 22px;
+    --fontTitle: "OKDdung";
+    --fontSub: "MabinogiClassic";
+    --white: #fff;
+    --black: #000;
+    --orange: #e5774f;
+    --orange2: #eb943a;
+    --bgMain: #f4b861;
+    --bgSub: #fef2e0;
+    --brown: #762917;
+}
+
+/* 레이아웃 */
+body {
+    background-color: var(--bgMain);
+}
+#header {}
+#main {}
 #footer {
     padding: 40px 0;
     text-align: center;
@@ -46,162 +69,62 @@ body{
     text-decoration: underline;
 }
 
-/* 헤더 영역 */
-#header h1 a {
-    font-size: 60px;
-    font-weight: 700;
+/* container */
+.container {
+    width: 1400px;
+    height: 100%;
+    margin: 0 auto;
 }
-.header_nav ul li {
-    display: inline;
-}
-.header_nav ul li.active a {
-    background-color: #000;
-    color: #fff;
-}
-.header_nav ul li a {
-    border:  1px solid #222;
-    padding: 8px 25px;
-    display: inline-block;
-    margin-bottom: 7px;
-}
-.header_nav ul li a:hover{
- background-color: #000;
- color: #fff;
-}
-.header_nav .study {
-    margin-top: 10px;
-}
-.header_nav .study li{}
-.header_nav .study li a{
-    border-radius: 50px;
-    padding: 6px 30px;
-    background-color: #000;
-    color: #fff;
-}
-/* 메인 샘플 */
-.main_sample {
-    margin-top: 40px;
-    border-top: 1px dashed #dcdcdc;
-    padding-top: 40px;
-}
-.main_sample h3 {
-    font-size: 18px;
-    margin-bottom: 5px;
-}
-.main_sample p {
-    margin-bottom: 10px;
-    color: #666;
-}
-.main_sample .result {
-    margin-bottom: 80px;
-}
-.box {
-    background-color: #ededed;
-    padding: 10px;
-}
-.table {
-    width: 100%;
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-.table .center {
+
+/* main__title */
+.main__title {
+    margin: 200px 20px;
+    border: 4px solid var(--brown);
+    background-color: var(--bgSub);
+    padding: 80px;
     text-align: center;
 }
-.table tr th {
-    border: 1px solid #dedede;
-    background-color: #fff;
-    padding: 10px;
-    font-weight: normal;
+.main__title h1 {
+    font-family: var(--fontTitle);
+    font-size: 8vw;
+    color: var(--orange);
+    white-space: nowrap;
 }
-.table tr td {
-    border: 1px solid #dedede;
-    padding: 10px;
+.main__title h1 strong {
+    color: var(--orange2);
 }
-
-/* 티스토리용 문서*/
-
-.document i {
-    font-style: normal;
-    position: relative;
+.main__title em {
+    font-family: var(--fontSub);
+    font-size: 100px;
+    color: var(--brown);
 }
-.document i::before {
-    content:'';
-    background-color: #2141df62;
-    width: 100%;
-    height: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    border-radius: 20px;
-}
-.document hr {
-    border: 0;
-    border-top: 1px dashed #dcdcdc;
-    margin-top: 45px;
-}
-.document .t_tit {
+.main__title p {
+    font-family: var(--fontSub);
     font-size: 30px;
-    line-height: 1.6;
-    margin-bottom: 5px;
-    font-weight: 400;
-}
-.document .t_tit2 {
-    font-size: 22px;
-    line-height: 1.6;
+    color: var(--brown);
     margin-top: 50px;
-    margin-bottom: 5px;
-    font-weight: 400;
 }
-.document .t_tit3 {
-    font-size: 16px;
-    line-height: 1.6;
-    margin-top: 0px;
-    margin-bottom: 5px;
-    font-weight: 400;
+
+/* main__desc */
+.main__desc {
+    margin: 200px 20px;
+    border: 4px solid var(--brown);
+    background-color: var(--bgSub);
+    padding: 80px;
 }
-.document .t_desc {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #666;
-    margin-bottom: 10px !important;
+.main__desc .title {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
 }
-.document .t_desc2 {
-    font-size: 16px;
-    line-height: 1.6;
-    color: #666;
-    margin-bottom: 10px !important;
-    padding: 15px 20px !important;
-    border-left: 4px solid #2043f1;
-    background-color: #f9f9f9;
+.main__desc .title h2 {
+    width: 30%;
+    border: 4px solid var(--brown);
+    font-size: 2rem;
+    padding: 0.5rem 1rem;
 }
-.document .t_box {
-    padding: 20px !important;
-    background-color: #f9f9f9;
-    margin-bottom: 10px;
-    color: #666;
-    border-radius: 5px;
-}
-.document .t_table {
-    border: 1px solid #dcdcdc;
-    width: 100%;
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-.document .t_table tr th{
-    background-color: #f9f9f9;
-}
-.document .t_table tr th,
-.document .t_table tr td {
-    border: 1px solid #dcdcdc;
-    font-weight: normal;
-    padding: 8px 10px;
-    color: #666
-}
-.document .t_table .ce {
-    text-align: center;
-}
-@media (max-width: 800px) {
-    body {
-        padding: 20px;
-    }
+.main__desc .title p {
+    width: 70%;
+    font-family: var(--fontSub);
+    color: var(--brown);
 }
