--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://webfontworld.github.io/ok/OKDdung.css');
 @import url('https://webfontworld.github.io/NexonMabinogi/MabinogiClassic.css');
+@import url('https://webfontworld.github.io/score/SCoreDream.css');
 
 
 /* 여백 초기화 */
@@ -46,10 +47,12 @@ table {
     font-style: 22px;
     --fontTitle: "OKDdung";
     --fontSub: "MabinogiClassic";
+    --fontDocs: "SCoreDream";
     --white: #fff;
     --black: #000;
     --orange: #e5774f;
     --orange2: #eb943a;
+    --red: #c54435;
     --bgMain: #f4b861;
     --bgSub: #fef2e0;
     --brown: #762917;
@@ -118,13 +121,50 @@ body {
     margin-bottom: 2rem;
 }
 .main__desc .title h2 {
-    width: 30%;
+    width: 25%;
     border: 4px solid var(--brown);
     font-size: 2rem;
-    padding: 0.5rem 1rem;
+    padding: 0.4rem 1rem 0.3rem 80px;
+    font-family: var(--fontDocs);
+    font-weight: 900;
+    color: var(--brown);
+    position: relative;
+    box-sizing: border-box;
+}
+.main__desc .title h2::before {
+    content: '';
+    width: 50px;
+    height: 100%;
+    background: var(--red);
+    position: absolute;
+    left: 0;
+    top: 0;
+    border-right: 4px solid var(--brown);
 }
 .main__desc .title p {
+    padding: 10px;
     width: 70%;
     font-family: var(--fontSub);
     color: var(--brown);
+}
+.main__desc .table {
+    border: 3px solid var(--brown);
+    font-family: var(--fontDocs);
+    font-size: 0.8rem;
+}
+.main__desc .table tr th{
+    background-color: rgba(0, 0, 0, 0.08)
+}
+.main__desc .table tr th,
+.main__desc .table tr td {
+    border: 1px solid var(--brown);
+    padding: 10px;
+    text-align: center;
+}
+.main__desc .table tr td:nth-child(3){
+    text-align: left;
+}
+.main__desc .table tr td span {
+    font-size: 16px;
+    padding-top: 4px;
 }
