--- a/javascript/assets/css/style.css
+++ b/javascript/assets/css/style.css
@@ -221,6 +221,20 @@ body{
     width: 100%;
     height: 100%;
 }
+.document .t_link a {
+    display: block;
+    width: 150px;
+    background: #a4d3ac62;
+    color: #666;
+    margin: 40px auto;
+    border-radius: 20px;
+    text-align: center;
+    padding: 10px;
+    transition: all 0.3s;
+}
+.document .t_link a:hover {
+    color: #fff;
+}
 
 @media (max-width: 800px) {
     body {
