--- a/javascript/assets/css/quiz.css
+++ b/javascript/assets/css/quiz.css
@@ -238,6 +238,36 @@ body {
     animation: wobble 0.6s;
 }
 
+.quiz__selects {
+    display: flex;
+}
+.quiz__selects label {
+
+}
+.quiz__selects label input {
+    position: absolute;
+    left: -9999px;
+}
+.quiz__selects label span{
+    font-size: 20px;
+    font-family: "Cafe24Dangdanghae";
+    padding: 10px 30px 10px 20px;
+}
+.quiz__selects label span::before {
+    content: '';
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #fff;
+    display: flex;
+    box-shadow: inset 0px 0px 0px 3px #d4d4d4;
+}
+/* .quiz__selects label input:checked + span {
+    background-color: #c0b9f5;
+} */
+.quiz__selects label input:checked + span::before {
+    box-shadow: inset 0px 0px 0px 5px #c0b9f5;
+}
 @keyframes wobble {
     0% {transform: translateX(0) rotate(0deg)}
     15% {transform: translateX(-25%) rotate(-5deg)}
