--- a/css/assets/css/style.css
+++ b/css/assets/css/style.css
@@ -221,3 +221,10 @@ body {
     font-size: 16px;
     padding-top: 4px;
 }
+.main__desc .table.rowTable tr td:nth-child(2),
+.main__desc .table.rowTable tr td:nth-child(3) {
+    text-align: center;
+}
+.main__desc .table .rowTable .left {
+    text-align: left !important;
+}
