--- a/javascript/assets/css/dracula.css
+++ b/javascript/assets/css/dracula.css
@@ -2,7 +2,7 @@ pre code.hljs {
     display: block;
     overflow-x: auto;
     padding: 20px;
-    font-family: 'NexonLv1Gothic';
+    font-family: 'SCoreDream';
     line-height: 1.6;
     margin-bottom: 20px;
     border-radius: 5px;
