--- a/javascript/assets/css/search.css
+++ b/javascript/assets/css/search.css
@@ -125,15 +125,30 @@ li {
 .search__list li.show {
     display: block;
 }
-.search_info {
+.search__info {
     text-align: center;
     margin-bottom: 30px;
     padding-bottom: 10px;
     border-bottom: 2px solid var(--htmlColor);
 }
-.search_info .type {
+.search__info .type {
     text-align: center;
     margin-bottom: 10px;
+}
+.search__info .keyword {
+    text-align: center;
+    margin-bottom: 10px;
+}
+.search__info .keyword span {
+    border: 2px solid var(--htmlColor);
+    border-radius: 50px;
+    padding: 10px;
+    display: inline-block;
+}
+.search__info .keyword span:hover {
+    background-color: var(--htmlColor);
+    color: #fff;
+    cursor: pointer;
 }
 
 @media (max-width: 600px) {
