--- a/site/site1/assets/css/common.css
+++ b/site/site1/assets/css/common.css
@@ -39,6 +39,13 @@
     text-align: center;
     margin-bottom: 70px;
 }
+.section > span {
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    text-decoration: underline;
+    margin-bottom: 16px;
+}
 
 /*  폰트 */
 .nexon {
