--- a/javascript/assets/css/quizDracula.css
+++ b/javascript/assets/css/quizDracula.css
@@ -16,7 +16,7 @@ code.hljs {
 }
 .hljs {
     color: #E9E9F4;
-    background: #282936;
+    background: #303030
 }
 .hljs ::selection,
 .hljs::selection {
