--- a/site/site1/assets/css/card.css
+++ b/site/site1/assets/css/card.css
@@ -1,3 +1,6 @@
+#cardType {
+    background-color: #f9f9f9;
+}
 .card__inner {
     display: flex;
     justify-content: space-between;
@@ -27,4 +30,14 @@
     display: -webkit-box;
     -webkit-line-clamp: 4; 
     -webkit-box-orient: vertical;
+}
+
+@media (max-width: 800px) {
+    .card__inner {
+        display: block;
+        margin-left: 215px;
+    }
+    .card {
+        margin-bottom: 20px;
+    }
 }
