--- a/site/site1/assets/css/footer.css
+++ b/site/site1/assets/css/footer.css
@@ -1,6 +1,7 @@
 .footer__menu {
     display: flex;
     margin-bottom: 70px;
+    text-align: center;
 }
 .footer__menu > div {
     width: 16%;
@@ -21,4 +22,18 @@
     padding-top: 40px;
     color: #666;
     line-height: 1.5;
+}
+
+@media (max-width: 800px) {
+    .footer__inner {
+        margin-left: 20px;
+    }
+    .footer__menu {
+        width: 800px;
+        display: flex;
+        margin-bottom: 20px;
+    }
+    .footer__right {
+        width: 760px;
+    }
 }
