--- a/site/site1/assets/css/header.css
+++ b/site/site1/assets/css/header.css
@@ -55,3 +55,17 @@
     background-color: #000;
     color: #fff;
 }
+
+@media (max-width:800px) {
+    .header__inner {
+        width: 800px;
+    }
+    .header__logo {
+        display: none;
+    }
+    .header__menu li a {
+        float: left;
+        font-size: 14px;
+        padding: 0;
+    }
+}
