--- a/site/site1/assets/css/imgText.css
+++ b/site/site1/assets/css/imgText.css
@@ -2,11 +2,13 @@
     display: flex;
     justify-content: space-between;
 }
-.imgText__inner > div {
+/* .imgText__inner > div {
     width: 32%;
     height: 500px;
+} */
+.imgText__txt {
+    width: 32%;
 }
-.imgText__txt {}
 .imgText__txt span {
     font-size: 16px;
     color: #666;
@@ -48,27 +50,54 @@
     left: 5px;
     top: 9px;
 }
-.imgText__img {
+.imgText__all {
+    display: flex;
+    height: 500px;
+    width: 740px;
+}
+.imgText__img{
     border-radius: 10px;
     position: relative;
 }
-.imgText__img a {
+.imgText__all .imgText__img a {
     position: absolute;
     left: 30px;
     bottom: 30px;
-    background-color: #7c2b39;
+    background-color: #64646470;
     color: #fff;
     font-size: 18px;
     padding: 10px 30px;
     border-radius: 30px;
     display: inline-block;
 }
-.imgText__img a.blue {
-    background-color: #2B387C;
+.imgText__all .imgText__img a.blue {
+    background-color: #44444470;
 }
-.imgText__img.img1 {
+.imgText__all .imgText__img.img1 {
+    width: 400px;
+    margin-right: 20px;
     background: url(../img/imgText_bg01.jpg) no-repeat center;
 }
-.imgText__img.img2 {
+.imgText__all .imgText__img.img2 {
+    width: 400px;
     background: url(../img/imgText_bg02.jpg) no-repeat center;
+}
+
+@media (max-width: 800px) {
+    .imgText__inner {
+        min-width: 800px;
+        display: block;
+    }
+    .imgText__txt {
+        margin-left: 29px;
+        min-width: 800px;
+        margin-bottom: 20px;
+    }
+    .imgText__txt ul li {
+        display: inline;
+        list-style: none;
+    }
+    .imgText__all {
+        margin-left: 29px;
+    }
 }
