--- a/site/site1/assets/css/footer.css
+++ b/site/site1/assets/css/footer.css
@@ -24,7 +24,20 @@
     line-height: 1.5;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 960px ) {
+    .footer__menu {
+        display: none;
+    }
+    .footer__right {
+        padding-top: 0;
+        border-top: 0;
+    }
+    .footer__wrap {
+        padding: 40px 0;
+    }
+}
+
+/* @media (max-width: 768px) {
     .footer__inner {
         margin-left: 25px;
     }
@@ -36,4 +49,4 @@
     .footer__right {
         width: 720px;
     }
-}
+} */
