--- a/site/site1/assets/css/common.css
+++ b/site/site1/assets/css/common.css
@@ -16,13 +16,17 @@
     left: 5px;
 }
 
-/* 섹션 공통 요소 */
+/* 컨테이너 */
 .container {
-    width: 1160px;
+    width: 100%;
+    max-width: 1160px;
     padding: 0 20px;
     margin: 0 auto;
-    min-width: 1160px;
+    box-sizing: border-box;
 }
+@media (max-width: 1200px) {}
+
+/* 섹션 공통 요소 */
 .section {
     padding: 120px 0;
 }
@@ -38,6 +42,9 @@
     color: #666;
     text-align: center;
     margin-bottom: 70px;
+    padding: 0 20px;
+    word-break: keep-all;
+    line-height: 1.5;
 }
 .section > span {
     display: block;
@@ -45,6 +52,30 @@
     font-size: 16px;
     text-decoration: underline;
     margin-bottom: 16px;
+}
+@media (max-width: 960px) {
+    .section {
+        padding: 100px 0;
+    }
+    .section > h2 {
+        font-size: 40px;
+    }
+    .section > p {
+        font-size: 18px;
+        margin-bottom: 60px;
+    }
+}
+@media (max-width: 600px) {
+    .section {
+        padding: 80px 0;
+    }
+    .section > h2 {
+        font-size: 30px;
+    }
+    .section > p {
+        font-size: 16px;
+        margin-bottom: 50px;
+    }
 }
 
 /*  폰트 */
