--- a/site/site1/assets/css/header.css
+++ b/site/site1/assets/css/header.css
@@ -56,7 +56,7 @@
     color: #fff;
 }
 
-@media (max-width:768px) {
+/* @media (max-width:768px) {
     .header__inner {
         width: 768px;
     }
@@ -71,4 +71,4 @@
         font-size: 14px;
         padding: 0;
     }
-}
+} */
