--- a/site/site1/assets/css/imgText.css
+++ b/site/site1/assets/css/imgText.css
@@ -2,10 +2,10 @@
     display: flex;
     justify-content: space-between;
 }
-/* .imgText__inner > div {
+.imgText__inner > div {
     width: 32%;
     height: 500px;
-} */
+}
 .imgText__txt {
     width: 32%;
 }
@@ -27,8 +27,6 @@
 .imgText__txt h3 {
     font-size: 50px;
     font-weight: 300;
-    word-break: keep-all;
-    line-height: 1.4;
     margin-bottom: 20px;
 }
 .imgText__txt ul li{
@@ -50,16 +48,11 @@
     left: 5px;
     top: 9px;
 }
-.imgText__all {
-    display: flex;
-    height: 500px;
-    width: 740px;
-}
 .imgText__img{
     border-radius: 10px;
     position: relative;
 }
-.imgText__all .imgText__img a {
+.imgText__img a {
     position: absolute;
     left: 30px;
     bottom: 30px;
@@ -70,20 +63,68 @@
     border-radius: 30px;
     display: inline-block;
 }
-.imgText__all .imgText__img a.blue {
+.imgText__img a.blue {
     background-color: #44444470;
 }
-.imgText__all .imgText__img.img1 {
-    width: 400px;
-    margin-right: 20px;
+.imgText__img.img1 {
     background: url(../img/imgText_bg01.jpg) no-repeat center;
 }
-.imgText__all .imgText__img.img2 {
-    width: 400px;
+.imgText__img.img2 {
     background: url(../img/imgText_bg02.jpg) no-repeat center;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 960px) {
+    .imgText__inner {
+        flex-wrap: wrap;
+    }
+    .imgText__txt h3 {
+        font-size: 40px;
+    }
+    .imgText__txt p {
+        margin-bottom: 60px;
+    }
+    .imgText__inner > div.imgText__txt {
+        width: 100%;
+        height: auto;
+        text-align: center;
+    }
+    .imgText__inner > div.imgText__txt ul {
+        display: none;
+    }
+    .imgText__inner > div.imgText__img {
+        width: 49%;
+    }
+    .imgText__img a {
+        left: 11%;
+        bottom: 5%;
+    }
+}
+@media (max-width: 600px) {
+    .imgText__txt span {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+    .imgText__txt h3 {
+        font-size: 30px;
+    }
+    .imgText__txt p {
+        margin-bottom: 50px;
+        font-size: 16px;
+    }
+    .imgText__inner > div.imgText__img {
+        width: 100%;
+        height: 300px;
+    }
+    .imgText__inner > div.imgText__img.img1 {
+        margin-bottom: 20px;
+    }
+    .imgText__img a {
+        left: 12%;
+        bottom: 5%;
+    }
+}
+
+/* @media (max-width: 768px) {
     .imgText__inner {
         min-width: 768px;
         display: block;
@@ -100,4 +141,4 @@
     .imgText__all {
         margin-left: 15px;
     }
-}
+} */
