--- a/site/site1/assets/css/text.css
+++ b/site/site1/assets/css/text.css
@@ -73,7 +73,30 @@
     color: #666;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 960px) {
+    .text {
+        width: 49%;
+        background: #f5f5f5;
+    }
+}
+@media (max-width: 600px) {
+    .text__title {
+        font-size: 24px;
+    }
+    .text__desc {
+        font-size: 16px;
+    }
+}
+@media (max-width: 480px) {
+    .text {
+        width: 100%;
+    }
+    .text .desc {
+        font-size: 16px;
+    }
+}
+
+/* @media (max-width: 768px) {
     .container {
         min-width: 768px;
         padding: 0;
@@ -88,4 +111,4 @@
         margin-bottom: 0%;
         padding: 30px;
     }
-}
+} */
