--- a/site/site1/assets/css/header.css
+++ b/site/site1/assets/css/header.css
@@ -10,9 +10,8 @@
     position: fixed;
     left: 0;
     top: 0;
-    background-color: #fff;
-    backdrop-filter: blur(10px);
     z-index: 10000;
+    background: #fff;
 }
 .header__logo {
     width: 20%;
@@ -23,7 +22,6 @@
 .header__logo em {
     font-size: 18px;
     font-weight: 400;
-    font-style: normal;
 }
 .header__menu {
     width: 60%;
@@ -38,7 +36,7 @@
     transition: background-color 0.3s;
 }
 .header__menu li a:hover {
-    background-color: #f1f1f1;
+    background-color: #F1F1F1;
     border-radius: 5px;
 }
 .header__member {
@@ -50,6 +48,7 @@
     border: 1px solid #000;
     padding: 10px 30px;
     border-radius: 50px;
+    transition: all 0.3s;
 }
 .header__member a:hover {
     background-color: #000;
@@ -57,7 +56,7 @@
 }
 .header__ham {
     position: absolute;
-    right: 20px;
+    right: 10px;
     top: 10px;
     z-index: 1000;
     width: 50px;
@@ -67,64 +66,64 @@
 }
 .header__ham span {
     display: block;
-    background: #ccc;
+    background: #000;
     width: 30px;
     height: 2px;
     border-radius: 3px;
     margin-left: 10px;
     margin-top: 5px;
+    transition: 0.25s margin 0.25s, 0.25s transform;
 }
-.header__ham span:nth-child(1) {
-    margin-top: 17px;
+.header__ham span:nth-child(1){
+    margin-top: 18px;
 }
-.header__ham:active span {
-    transition: 0.25s margin, 0.25s transform 0.25;
+.header__ham.active span {
+    transition: 0.25s margin, 0.25s transform 0.25s;
 }
-.header__ham:active span:nth-child(1) {
-    margin-top: 22px;
-    margin-bottom: -4px;
-    /* transform: rotate(45deg); */
+.header__ham.active span:nth-child(1){
+    margin-top: 25px;
+    margin-bottom: -7px;
+    transform: rotate(45deg);
 }
-.header__ham:active span:nth-child(2) {
-    /* transform: rotate(45deg); */
+.header__ham.active span:nth-child(2){
+    transform: rotate(45deg);
 }
-.header__ham:active span:nth-child(3) {
-    margin-top: -4px;
-    /* transform: rotate(130deg); */
+.header__ham.active span:nth-child(3){
+    margin-top: -2px;
+    transform: rotate(135deg);
 }
-
-@media (max-width: 1300px) {
+/* media */
+@media (max-width: 1300px){
     .header__menu {
         position: fixed;
         right: -100%;
-        top: 0;
-        background: #ccc;
-        width: auto;
+        top: 69px;
+        background: #fff;
+        width: 50%;
+        height: 100vh;
+        padding: 20px;
+        text-align: right;
+        transition: right 0.4s ease-in;
     }
     .header__menu li {
         display: block;
+        margin: 20px;
+    }
+    .header__menu li a {
+        padding: 10px;
+        white-space: nowrap;
+    }
+    .header__menu.active {
+        right: 0;
     }
     .header__member {
-        margin-right: 60px;
+        margin-right: 50px;
     }
     .header__ham {
         display: block;
     }
 }
-
-/* @media (max-width:768px) {
-    .header__inner {
-        width: 768px;
-    }
-    .header__menu {
-        width: 500px;
-    }
-    .header__logo {
-        display: none;
-    }
-    .header__menu li a {
-        float: left;
-        font-size: 14px;
-        padding: 0;
-    }
-} */
+@media (max-width: 600px) {
+    .header__logo {}
+    .header__member {}
+}
