--- a/site/site1/assets/css/common.css
+++ b/site/site1/assets/css/common.css
@@ -88,6 +88,15 @@
 .gray {
     background-color: #f5f5f5;
 }
+body {
+    overflow: overlay;
+}
+
+/* fixed */
+body.fixed {
+    height: 100vh;
+    overflow: hidden;
+}
 
 /* 간격 셋팅 */
 .mb9 {margin-bottom: 0 !important;}
